--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html>
   <head>
     <title></title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  
+  <div>
     <h1>Hello, Gakko!</h1>
+    <h2>-a bob ross ipsum</h2>
+    <img src="https://cdn.discordapp.com/attachments/210815251355140096/462761028892229632/image.jpg">
     <p>For the record, nothing much really happened. I just sat in a car with my brother while we were sleep deprived, and we loudly sang various songs. Some nice taquitos I ate though.</p>
-    
+
+    <p>They say everything looks better with odd numbers of things. But sometimes I put even numbers—just to upset the critics. There is immense joy in just watching - watching all the little creatures in nature. This present moment is perfect simply due to the fact you're experiencing it. We'll paint one happy little tree right here.</p>
+
+<p>Everybody needs a friend. You create the dream - then you bring it into your world. Just let your mind wander and enjoy. This should make you happy. This is the fun part</p>
+
+<p>We spend so much of our life looking - but never seeing. Of course he's a happy little stone, cause we don't have any other kind. We don't make mistakes we just have happy little accidents. I'm a water fanatic. I love water.</p>
+
+<p>Now then, let's play. Once you learn the technique, ohhh! Turn you loose on the world; you become a tiger. Even trees need a friend. We all need friends. Go out on a limb - that's where the fruit is. Only eight colors that you need.</p>
+
+<p>You don't want to kill all your dark areas they are very important. It's a very cold picture, I may have to go get my coat. It’s about to freeze me to death. Don't fiddle with it all day. We tell people sometimes: we're like drug dealers, come into town and get everybody absolutely addicted to painting. It doesn't take much to get you addicted.</p>
+
+
+   </div>
   </body>
 </html>
