--- a/index.html
+++ b/index.html
@@ -6,11 +6,54 @@
   </head>
   <body>
 
+
   	<div class="container">
-		<header>we out here</header>
-		<nav>b-</nav>
-		<main>b-</main>
-		<aside>bois</aside>
+		<header>👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌</header>
+		<nav>
+			<h2>some facts about bob ross</h2>
+
+			<p>Bob Ross hosted 401 episodes of The Joy of Painting.</p>
+
+			<p>Bob Ross's left index finger is missing.</p>
+
+			<p>He had a squirrel named Peapod.</p>
+
+			<p>The monster made about 30,000 paintings in his lifetime.</p>
+
+			<p>He was only 52 years old when he perished.</p>
+
+			<p>He never made a cent off of his TV series.</p>
+
+			<p>and now you know</p>
+
+
+
+		</nav>
+		<main>
+			<h2>-a bob ross lipsum-</h2>
+			<p>	Here we're limited by the time we have. We need dark in order to show light. Very easy to work these to death. Everyone needs a friend. Friends are the most valuable things in the world. There's not a thing in the world wrong with washing your brush. This present moment is perfect simply due to the fact you're experiencing it. Anytime you learn something your time and energy are not wasted. Nothing's gonna make your husband or wife madder than coming home and having a snow-covered dinner. What the devil.</p>
+
+<p>	The man who does the best job is the one who is happy at his job. Let's do that again. Life is too short to be alone, too precious. Share it with a friend. Maybe there's a happy little bush that lives right there. Nothing wrong with washing your brush. We have no limits to our world. We're only limited by our imagination. The light is your friend. Preserve it. Be so very light. Be a gentle whisper. You are only limited by your imagination.</p>
+
+<p>	I'm sort of a softy, I couldn't shoot Bambi except with a camera. That's a crooked tree. We'll send him to Washington. Everybody needs a friend. There's nothing wrong with having a tree as a friend. Water's like me. It's laaazy ... Boy, it always looks for the easiest way to do things These trees are so much fun. I get started on them and I have a hard time stopping. That's what makes life fun. That you can make these decisions. That you can create the world that you want. Every single thing in the world has its own personality - and it is up to you to make friends with the little rascals.</p>
+</p>
+		</main>
+		<aside>
+			<p>👏 if 👏 you 👏 know 👏 jazz 👏 then 👏 who's 👏 this?
+
+			<img src="https://bobgillis.files.wordpress.com/2014/10/at31022_xtr.jpg">
+
+			👏 ex 👏 act 👏 ly. If only you joined Famicians, yeah?</p>
+
+			<p>
+				famicians: for the famous musician you wanna learn about.
+			</p>
+	
+
+
+
+
+		</aside>
 		<footer>yeet</footer>
   	</div>
 
